Add release packaging: Windows client zip and server Docker image
Migrated verbatim from the StarWars project (its CLAUDE.md/design.md
documents the mechanism and gotchas this was built against): jpackage
produces a self-contained RobotRampage-Client.zip with an in-place
updater, and server/Dockerfile builds a Docker image for QNAP Container
Station, both published by tag-triggered GitHub Actions workflows.

Uses TCP 45725 only, confirmed against StarWars' own NetworkConstants/
Dockerfile/compose file (45625/tcp + 45626/udp) to avoid a port clash
when both servers run on the same NAS.

Verified locally: the packaged client was built and launched (both
under a SNAPSHOT version and under the exact -Djgitver.use-version
override the CI workflow uses), and a full mvn clean package still
passes. The Docker build itself is unverified locally (no docker in
this environment) - first real check is release-server.yml on the
v0.0.1 tag push.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>